Updated the File content Encryption and logging
Updated the File content Encryption and logging

Co-Authored-By: Dharani <51089668+Dharani2501@users.noreply.github.com>

--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "82bd05e9",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,16 @@
     "import os\n",
     "import socket as c\n",
     "import pickle\n",
-    "import json"
+    "import json\n",
+    "import pyaes, pbkdf2, binascii, os, secrets\n",
+    "import base64\n",
+    "from config import *\n",
+    "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "35510668",
    "metadata": {},
    "outputs": [
@@ -23,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.133.129\n"
+      "127.0.0.1\n"
      ]
     }
    ],
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e9454d9a",
    "metadata": {},
    "outputs": [],
@@ -48,7 +52,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
+   "id": "ae0ff0b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#creating configuation file for generating client logs\\n\\n#logging.basicConfig(filename=\"client_logs.log\", encoding=\\'UTF-8\\', level=logging.DEBUG)\\nclient_logger = logging.getLogger(__name__)\\nclient_logger.setLevel(logging.INFO)\\nhandler = logging.FileHandler(\\'client_logs.log\\', \\'w\\', \\'utf-8\\')\\nhandler.setLevel(logging.INFO)\\nclient_logger.addHandler(handler)\\nformatter = logging.Formatter(\\'%(asctime)s  %(name)s  %(levelname)s: %(message)s\\')\\nhandler.setFormatter(formatter)'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''#creating configuation file for generating client logs\n",
+    "\n",
+    "#logging.basicConfig(filename=\"client_logs.log\", encoding='UTF-8', level=logging.DEBUG)\n",
+    "client_logger = logging.getLogger(__name__)\n",
+    "client_logger.setLevel(logging.INFO)\n",
+    "handler = logging.FileHandler('client_logs.log', 'w', 'utf-8')\n",
+    "handler.setLevel(logging.INFO)\n",
+    "client_logger.addHandler(handler)\n",
+    "formatter = logging.Formatter('%(asctime)s  %(name)s  %(levelname)s: %(message)s')\n",
+    "handler.setFormatter(formatter)'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e99ab18b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getKey(): #generating key with PBKDF2 for AES\n",
+    "    password = password_key\n",
+    "    passwordSalt = salt\n",
+    "    key = pbkdf2.PBKDF2(password, passwordSalt).read(32)\n",
+    "    return key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1288b16e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encrypt(plaintext): #AES data encryption\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
+    "    ciphertext = aes.encrypt(plaintext)\n",
+    "    return ciphertext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1c95f74d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decrypt(enc): #AES data decryption\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
+    "    decrypted = aes.decrypt(enc)\n",
+    "    return decrypted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e2b0efa9",
    "metadata": {},
    "outputs": [],
@@ -57,7 +131,7 @@
     "#client_port = sys.argv[2]\n",
     "\n",
     "available_files = []\n",
-    "username = \"dhruv\"\n",
+    "#username = \"random\"\n",
     "\n",
     "def create_client():\n",
     "    with c.socket(c.AF_INET, c.SOCK_STREAM) as client:\n",
@@ -80,8 +154,9 @@
     "# Function to create the directory\n",
     "######################################\n",
     "        \n",
-    "        def createDirectory():\n",
-    "            global username, dirname\n",
+    "        def createDirectory(username):\n",
+    "            #global username, dirname\n",
+    "            global dirname\n",
     "            print(\"\\nPlease enter directory name\")\n",
     "            dirname = input()\n",
     "\n",
@@ -105,9 +180,10 @@
     "# Function to create file in Server\n",
     "######################################\n",
     "            \n",
-    "        def createFile():\n",
+    "        def createFile(username):\n",
     "\n",
-    "            global username, dirname\n",
+    "            #global username, dirname\n",
+    "            global dirname\n",
     "            print(\"\\nPlease enter directory name to create file\")\n",
     "            dirname = input()\n",
     "            print(\"Please enter file name\")\n",
@@ -125,16 +201,16 @@
     "            available_files.append(\"files/\"+dirname+\"/\"+filename)\n",
     "\n",
     "            client.send(features)\n",
-    "            print(data+\"\\n\")                    \n",
+    "            print(data+\"\\n\") \n",
     "\n",
     "######################################\n",
     "# Function to write file in Server\n",
     "######################################\n",
     "            \n",
-    "        def writeFile():\n",
+    "        def writeFile(username):\n",
     "\n",
-    "            global username, text\n",
-    "            global dirname\n",
+    "            #global username \n",
+    "            global dirname, text\n",
     "            print(\"\\nPlease enter directory name to write data\")\n",
     "            dirname = input()\n",
     "            print(\"Please enter file name\")\n",
@@ -147,6 +223,8 @@
     "            features.append(username)\n",
     "            features.append(dirname)\n",
     "            features.append(filename)\n",
+    "            filetext=encrypt(filetext)\n",
+    "            filetext=str(base64.b64encode(filetext),'utf-8')\n",
     "            features.append(filetext)\n",
     "            features = pickle.dumps(features)\n",
     "            client.send(features)\n",
@@ -158,8 +236,9 @@
     "# Function to read file in Server\n",
     "##################################\n",
     "            \n",
-    "        def readFile():\n",
-    "            global username, dirname\n",
+    "        def readFile(username):\n",
+    "            #global username\n",
+    "            global dirname\n",
     "\n",
     "            print(\"\\nPlease enter directory name to read file\")\n",
     "            dirname = input()\n",
@@ -186,19 +265,25 @@
     "#                 print(read_data[2])\n",
     "            if status == \"correct\":\n",
     "                data = result['data']\n",
+    "                if len(data) > 0:\n",
+    "                    data = base64.b64decode(data)\n",
+    "                    data = decrypt(data)\n",
+    "                    data = data.decode(\"utf-8\")\n",
     "                print(\"File Content Showing in Below lines\\n\\n\")\n",
     "                print(data)\n",
-    "                print(\"File Contenet ended here=================================\")\n",
+    "                print(\"File Content ended here=================================\")\n",
     "            else:\n",
     "                print(\"Given file does not exists\\n\")\n",
+    "                client_logger.error(\"%s\", username, \"trying to access %s\", filename, \"-that doesn't exist\")\n",
     "                \n",
     "######################################\n",
     "# Function to delete file in Server\n",
     "######################################\n",
     "                \n",
-    "        def deleteFile():\n",
+    "        def deleteFile(username):\n",
     "\n",
-    "            global username, dirname\n",
+    "            #global username\n",
+    "            global dirname\n",
     "            print(\"\\nPlease enter directory name to delete a file\")\n",
     "            dirname = input()\n",
     "            print(\"Please enter file name to delete it\")\n",
@@ -220,6 +305,7 @@
     "                    arr = names.split(\"/\")\n",
     "                    if arr[3] == filename:\n",
     "                        del available_files[i]\n",
+    "                        client_logger.info(\"%s\",username, \"deleted %s\", filename, \"from %s\", dirname)\n",
     "            print(data+\"\\n\")\n",
     "            \n",
     "\n",
@@ -227,10 +313,10 @@
     "# Function to rename file in Server\n",
     "####################################\n",
     "            \n",
-    "        def renameFile():\n",
+    "        def renameFile(username):\n",
     "\n",
-    "            global username, text\n",
-    "            global dirname\n",
+    "            #global username\n",
+    "            global dirname, text\n",
     "\n",
     "            print(\"\\nPlease enter directory name to rename a file\")\n",
     "            dirname = input()\n",
@@ -255,21 +341,23 @@
     "                arr = names.split(\"/\")\n",
     "                if arr[3] == oldname:\n",
     "                    del available_files[i]\n",
-    "            available_files.append('files/'+dirname+\"/\"+newname)        \n",
+    "            available_files.append('files/'+dirname+\"/\"+newname) \n",
+    "            client_logger.info(\"%s\", username, \"renamed %s\", oldname, \"from %s\", dirname)\n",
     "            print(data+\"\\n\")\n",
     "\n",
     "#################################            \n",
     "# Function to list file in Server\n",
     "#################################\n",
     "\n",
-    "        def listFiles():\n",
+    "        def listFiles(username):\n",
     "            print(\"\\nAvailable files for this user: \"+username+\"\\n\\n\")\n",
     "            for i in range(len(available_files)):\n",
     "                print(available_files[i])\n",
     "            print()\n",
     "\n",
-    "        def readFiles():\n",
-    "            global username, available_files\n",
+    "        def readFiles(username):\n",
+    "            #global username\n",
+    "            global available_files\n",
     "            if len(available_files) > 0:\n",
     "                available_files.clear()\n",
     "            features = []\n",
@@ -281,14 +369,47 @@
     "            data = pickle.loads(data)\n",
     "            for i in range(len(data)):\n",
     "                available_files.append(data[i])\n",
+    "                \n",
     "\n",
+    "######################################\n",
+    "# Function to change user permission\n",
+    "######################################\n",
     "\n",
+    "        def change_user_permission(username):\n",
+    "            #global username\n",
+    "            print(\"Enter the file name whose permission needs to be updated\")\n",
+    "            file_name_to_change_permission = str(input())\n",
+    "            print(\"Enter the user whose permission needs to be changed\")\n",
+    "            user_name_to_change_permission = str(input())\n",
+    "            print(\"Enter the updated permission\")\n",
+    "            updated_permission = str(input())\n",
+    "            \n",
+    "            features = []\n",
+    "            features.append(\"changePermission\")\n",
+    "            features.append(username)\n",
+    "            features.append(file_name_to_change_permission)\n",
+    "            features.append(user_name_to_change_permission)\n",
+    "            features.append(updated_permission)\n",
+    "            \n",
+    "            features = pickle.dump(features)\n",
+    "            client.send(features)\n",
+    "            \n",
+    "            data = client.recv(client_buffer)\n",
+    "            data = data.decode()\n",
+    "            print(data+\"\\n\")\n",
+    "            \n",
+    "            if data.lower() == \"permission updated\":\n",
+    "                print(\"permission updated\")\n",
+    "            else:\n",
+    "                client_logger.error(data)\n",
+    "            \n",
+    "            \n",
     "\n",
     "###############################################################################                    \n",
     "# The below are the operations that client can select and implement in server. \n",
     "###############################################################################\n",
     "\n",
-    "        def showmenu():\n",
+    "        def showmenu(username):\n",
     "            while True:\n",
     "                print(\"Hello There!\")\n",
     "\n",
@@ -303,31 +424,34 @@
     "                \n",
     "                # Write createdir to run create directory operation\n",
     "                elif operation.lower().strip() == \"createdir\":\n",
-    "                    createDirectory()\n",
+    "                    createDirectory(username)\n",
     "                \n",
     "                # Write createfile to run create file operation\n",
     "                elif operation.lower().strip() == \"createfile\":\n",
-    "                    createFile()\n",
+    "                    createFile(username)\n",
     "                \n",
     "                # Write writefile to run write file operation\n",
     "                elif operation.lower().strip() == \"writefile\":\n",
-    "                    writeFile()\n",
+    "                    writeFile(username)\n",
     "                \n",
     "                # Write readfile to run read file operation\n",
     "                elif operation.lower().strip() == \"readfile\":\n",
-    "                    readFile()\n",
+    "                    readFile(username)\n",
     "                \n",
     "                # Write deletefile to run delete file operation\n",
     "                elif operation.lower().strip() == \"deletefile\":\n",
-    "                    deleteFile()\n",
+    "                    deleteFile(username)\n",
     "\n",
     "                # Write renamefile to run rename file operation\n",
     "                elif operation.lower().strip() == \"renamefile\":\n",
-    "                    renameFile()\n",
+    "                    renameFile(username)\n",
     "                    \n",
     "                # Write listfile to run list file operation\n",
     "                elif operation.lower().strip() == \"listfile\":\n",
-    "                    listFiles()\n",
+    "                    listFiles(username)\n",
+    "                    \n",
+    "                elif operation.lower().strip() == \"changePermission\":\n",
+    "                    change_user_permission(username)\n",
     "                    \n",
     "                #  Write logout to get disconnect from the server\n",
     "                elif operation.lower().strip() == \"logout\":\n",
@@ -350,11 +474,11 @@
     "            client.send(features)\n",
     "            data = client.recv(client_buffer)\n",
     "            valid = data.decode()\n",
-    "            return valid\n",
+    "            return valid, username\n",
     "        \n",
-    "        def check_validation(valid):\n",
+    "        def check_validation(valid, username):\n",
     "            if valid == \"success\":\n",
-    "                showmenu()\n",
+    "                showmenu(username)\n",
     "                result = \"valid\"\n",
     "            else:\n",
     "                print(valid)\n",
@@ -369,8 +493,8 @@
     "        \n",
     "        result = \"invalid\"\n",
     "        while result == \"invalid\":\n",
-    "            valid = validating_client()\n",
-    "            result = check_validation(valid)\n",
+    "            valid, username = validating_client()\n",
+    "            result = check_validation(valid, username)\n",
     "            "
    ]
   },
@@ -385,18 +509,31 @@
      "output_type": "stream",
      "text": [
       "Please enter your username:\n",
-      "dhruv\n",
+      "payodhi\n",
       "Please enter your password:\n",
-      "dhruvjpatel68!\n",
+      "payodhi\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
-      "=> deletefile\n",
+      "=> readFile\n",
       "\n",
-      "Please enter directory name to delete a file\n",
+      "Please enter directory name to read file\n",
       "common\n",
-      "Please enter file name to delete it\n",
-      "payodhifile\n",
-      "You are not the owner of this file\n",
+      "Please enter file name to read it\n",
+      "pay12\n",
+      "File Content Showing in Below lines\n",
+      "\n",
+      "\n",
+      "hello\n",
+      "File Content ended here=================================\n",
+      "Hello There!\n",
+      "Enter the operation to be performed\n",
+      "=> createFile\n",
+      "\n",
+      "Please enter directory name to create file\n",
+      "common\n",
+      "Please enter file name\n",
+      "abc12\n",
+      "ACK@File Created\n",
       "\n",
       "Hello There!\n",
       "Enter the operation to be performed\n"
@@ -411,23 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a9352a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ffc5d80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18e64c78",
+   "id": "4f703ee1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -435,7 +556,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
