--- a/master/master.ipynb
+++ b/master/master.ipynb
@@ -15,7 +15,8 @@
     "import socket as s\n",
     "import threading\n",
     "import traceback\n",
-    "from socketserver import ThreadingTCPServer"
+    "from socketserver import ThreadingTCPServer\n",
+    "import logging"
    ]
   },
   {
@@ -28,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.200.133.129\n"
+      "127.0.0.1\n"
      ]
     }
    ],
@@ -37,7 +38,8 @@
     "#IP = ['10.200.147.198','10.200.0.169','10.200.132.105']\n",
     "\n",
     "# Enter the IPs of the servers in order: [Server1   Server 2   Server 3]\n",
-    "IP = ['10.200.133.129','10.200.133.129','10.200.133.129']\n",
+    "#IP = ['10.200.133.129','10.200.133.129','10.200.133.129']\n",
+    "IP = ['192.168.0.9', '192.168.0.9', '192.168.0.9']\n",
     "port1 = 8088\n",
     "# This are the ports of the respective srvers port: [Server1   Server 2   Server 3] at whiich master node will connect \n",
     "port = [3333, 3334, 3335]\n",
@@ -52,6 +54,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e1a02e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#creating configuration file for logging the user activity\n",
+    "root_logger = logging.getLogger(__name__)\n",
+    "root_logger.setLevel(logging.INFO)\n",
+    "handler = logging.FileHandler('master_logs.log', 'w', 'utf-8')\n",
+    "handler.setLevel(logging.INFO)\n",
+    "root_logger.addHandler(handler)\n",
+    "formatter = logging.Formatter('%(asctime)s  %(name)s  %(levelname)s: %(message)s')\n",
+    "handler.setFormatter(formatter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3aff0af9",
    "metadata": {},
    "outputs": [],
@@ -61,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "01f43b08",
    "metadata": {},
    "outputs": [],
@@ -77,19 +96,22 @@
     "            if validation.loc[i][1] == password:\n",
     "                output = \"success\"\n",
     "                username = username\n",
+    "                root_logger.info(\"%s logged in \", username)\n",
     "#                         readFiles()\n",
     "            else:\n",
     "                output = \"not success\"\n",
     "                print(\"wrong password\")\n",
+    "                root_logger.error(\"Incorrect Password\")\n",
     "            break\n",
     "        else:\n",
     "            output = \"not user\"\n",
+    "            root_logger.error(\"Invalid User\")\n",
     "    return output\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "da0be8d2",
    "metadata": {},
    "outputs": [],
@@ -102,7 +124,7 @@
     "    \n",
     "    #  Give the actual path of the permission's excel sheet present in your devise in variable given below \n",
     "    \n",
-    "    file_path = r'C:\\Users\\dhruv\\Desktop\\PCS Project 1\\py_files\\master\\permissions.xlsx'\n",
+    "    file_path = r'permissions.xlsx'\n",
     "    \n",
     "    permissions_dataframe = pd.read_excel(file_path, index_col=0)\n",
     "    \n",
@@ -113,16 +135,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d2bef101",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'def change_permission():\\n    username= str(input())\\n    file_name= str(input())\\n\\n    lock = threading.Lock()\\n\\n    #permission = get_permission(username, file_name)\\n    \\n    #  Give the actual path of the permission\\'s excel sheet present in your devise in variable given below\\n    \\n    file_path = r\\'permissions.xlsx\\'\\n    permissions_dataframe = pd.read_excel(file_path, index_col=0)\\n\\n    permission = permissions_dataframe.loc[username][file_name]\\n\\n    if permission == \"owner\":\\n        print(\"Enter the user whose permission needs to be changed\")\\n        user_name_to_change_permission = str(input())\\n        print(\"Enter the updated permission\")\\n        updated_permission = str(input())\\n\\n        permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\\n\\n        print(permissions_dataframe)\\n\\n        lock.acquire()\\n        with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists=\\'replace\\') as writer:\\n            permissions_dataframe.to_excel(writer, \\'Sheet1\\', index=True)\\n\\n        lock.release()\\n    else:\\n        print(\"You are not authorized to modify the permission\")'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "##################################################\n",
     "##       Change the client permision\n",
     "##################################################\n",
     "\n",
-    "def change_permission():\n",
+    "\n",
+    "def change_permission(file_name, user_name_to_change_permission, updated_permission):\n",
+    "    \n",
+    "    file_path = r'permissions.xlsx'\n",
+    "    permissions_dataframe = pd.read_excel(file_path, index_col=0)\n",
+    "    \n",
+    "    permissions_dataframe.loc[user_name_to_change_permission][file_name] = updated_permission\n",
+    "    \n",
+    "    lock.acquire()\n",
+    "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists='replace') as writer:\n",
+    "        permissions_dataframe.to_excel(writer, 'Sheet1', index=True)\n",
+    "\n",
+    "    lock.release()\n",
+    "    \n",
+    "    return \"Permission updated\"\n",
+    "    \n",
+    "\n",
+    "'''def change_permission():\n",
     "    username= str(input())\n",
     "    file_name= str(input())\n",
     "\n",
@@ -132,7 +182,7 @@
     "    \n",
     "    #  Give the actual path of the permission's excel sheet present in your devise in variable given below\n",
     "    \n",
-    "    file_path = r'C:\\Users\\dhruv\\Desktop\\PCS Project 1\\py_files\\master\\permissions.xlsx'\n",
+    "    file_path = r'permissions.xlsx'\n",
     "    permissions_dataframe = pd.read_excel(file_path, index_col=0)\n",
     "\n",
     "    permission = permissions_dataframe.loc[username][file_name]\n",
@@ -153,12 +203,12 @@
     "\n",
     "        lock.release()\n",
     "    else:\n",
-    "        print(\"You are not authorized to modify the permission\")"
+    "        print(\"You are not authorized to modify the permission\")'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "86707fe3",
    "metadata": {},
    "outputs": [],
@@ -173,10 +223,10 @@
     "    \n",
     "    #  Give the actual path of the permission's excel sheet present in your devise in variable given below\n",
     "    \n",
-    "    file_path = r'C:\\Users\\dhruv\\Desktop\\PCS Project 1\\py_files\\master\\permissions.xlsx'\n",
+    "    file_path = r'permissions.xlsx'\n",
     "    permissions_dataframe = pd.read_excel(file_path, index_col=0)\n",
     "    user_permission = []\n",
-    "\n",
+    "    print(username)\n",
     "    for user in permissions_dataframe.index:\n",
     "        if user == username:\n",
     "            prm = 'owner'\n",
@@ -185,19 +235,20 @@
     "        user_permission.append(prm)\n",
     "\n",
     "    permissions_dataframe[file_name] = user_permission\n",
-    "\n",
+    "    root_logger.info(f\"file permission for {file_name} updated for user {username} \")\n",
     "    print(permissions_dataframe)\n",
     "\n",
     "    lock.acquire()\n",
     "    with pd.ExcelWriter(file_path, engine=\"openpyxl\", mode=\"w\", if_sheet_exists='replace') as writer:\n",
     "        permissions_dataframe.to_excel(writer, 'Sheet1', index=True)\n",
     "\n",
-    "    lock.release()"
+    "    lock.release()\n",
+    "    return \"file created\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "91eb44f2",
    "metadata": {},
    "outputs": [],
@@ -241,7 +292,7 @@
     "        else:\n",
     "            if operation == \"createfile\":\n",
     "                \n",
-    "                set_permission_for_new_file(content[3], content[1])\n",
+    "                data = set_permission_for_new_file(content[3], content[1])\n",
     "                data = connect_all_server()\n",
     "                conn.send(data)\n",
     "                \n",
@@ -249,18 +300,22 @@
     "#             or \"\":\n",
     "                permission = get_permission(content[1], content[3])\n",
     "                print(\"User : \" + content[1] + \" || \"+ \" File : \" + content[3] + \" || \"+ \" Authorship : \"  + permission)\n",
-    "        \n",
+    "                \n",
+    "            \n",
     "                if permission == \"owner\" or permission == \"write\":\n",
     "                    data = connect_all_server()\n",
+    "                    root_logger.info(f\"Write operation performed on {content[3]} with user {content[1]}\")\n",
     "                    conn.send(data)\n",
     "                else:\n",
     "                    data = \"You have no permision to write\"\n",
+    "                    root_logger.error(\"Insufficient permission to write\")\n",
     "                    conn.send(data.encode())\n",
     "                    \n",
     "            elif operation == \"deletefile\": \n",
     "#             or operation == \"renamefile\":\n",
     "                \n",
     "                permission = get_permission(content[1], content[3])\n",
+    "                root_logger.info(f\"Delete operation performed on {content[3]} with user {content[1]}\" )\n",
     "                print(\"User : \" + content[1] + \" || \"+ \" File : \" + content[3] + \" || \"+ \" Authorship : \"  + permission)\n",
     "            \n",
     "                if permission == \"owner\":\n",
@@ -268,7 +323,21 @@
     "                    conn.send(data)\n",
     "                else:\n",
     "                    data = \"You are not the owner of this file\"\n",
+    "                    root_logger.error(\"Insufficient permission to delete\")\n",
     "                    conn.send(data.encode())\n",
+    "            \n",
+    "            elif operation == \"changePermission\":\n",
+    "                permission = get_permission(content[1], content[2])\n",
+    "                \n",
+    "                if permission == \"owner\":\n",
+    "                    root_logger.info(f\"Permission changed for {content[2]} on file {content[3]}\")\n",
+    "                    data = change_permission(content[2], content[3], content[4])\n",
+    "                    conn.send(data)\n",
+    "                else:\n",
+    "                    data = \"You are not authorized to change permission\"\n",
+    "                    root_logger.error(\"You are not authorized to change permission\")\n",
+    "                    conn.send(data.encode())\n",
+    "                \n",
     "            \n",
     "            else:\n",
     "                data = connect_all_server()    \n",
@@ -280,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a0373f4f",
    "metadata": {},
    "outputs": [],
@@ -294,6 +363,7 @@
     "            server.bind((IP_address, port1))\n",
     "        except:\n",
     "            print(\"Error in binding the socket\")\n",
+    "            root_logger.error(\"Error in binding the socket\")\n",
     "            sys.exit()\n",
     "        thread_list = []\n",
     "        server.listen(max_connections) #queues upto 10 requests\n",
@@ -307,6 +377,7 @@
     "                print(f\"Total Active connections {threading.activeCount()-1}\")\n",
     "            except:\n",
     "                print(\"Error in starting the thread\")\n",
+    "                root_logger.error(\"Error in starting the thread\")\n",
     "                traceback.print_exc()"
    ]
   },
@@ -320,11 +391,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Server listening upto 995 connections\n",
+      "Server listening upto 996 connections\n",
       "\n",
-      "Total Active connections 6\n",
+      "Total Active connections 5\n",
       "success\n",
-      "User: dhruvFile: payodhifileAuthorship: read\n"
+      "payodhi\n",
+      "            djp payodhifile dharanifile suryafile chandufile   temp  pay12  \\\n",
+      "Username                                                                     \n",
+      "dhruv     owner        read       write      not        read  owner    not   \n",
+      "payodhi   write       owner        read     write        not    not    not   \n",
+      "dharani    read       write       owner      not       write    not    not   \n",
+      "surya       not        read       write     owner      write    not    not   \n",
+      "chandu     read         not         not     write      owner    not    not   \n",
+      "random      not        read        read      read        not    not  owner   \n",
+      "\n",
+      "         pay123  abc12  \n",
+      "Username                \n",
+      "dhruv       not    not  \n",
+      "payodhi     not  owner  \n",
+      "dharani     not    not  \n",
+      "surya       not    not  \n",
+      "chandu      not    not  \n",
+      "random    owner    not  \n",
+      "payodhi\n",
+      "            djp payodhifile dharanifile suryafile chandufile   temp  pay12  \\\n",
+      "Username                                                                     \n",
+      "dhruv     owner        read       write      not        read  owner    not   \n",
+      "payodhi   write       owner        read     write        not    not    not   \n",
+      "dharani    read       write       owner      not       write    not    not   \n",
+      "surya       not        read       write     owner      write    not    not   \n",
+      "chandu     read         not         not     write      owner    not    not   \n",
+      "random      not        read        read      read        not    not  owner   \n",
+      "\n",
+      "         pay123  abc12  \n",
+      "Username                \n",
+      "dhruv       not    not  \n",
+      "payodhi     not  owner  \n",
+      "dharani     not    not  \n",
+      "surya       not    not  \n",
+      "chandu      not    not  \n",
+      "random    owner    not  \n"
      ]
     }
    ],
@@ -492,7 +598,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -506,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
