--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -14,7 +14,8 @@
     "import pyaes, pbkdf2, binascii, os, secrets\n",
     "import base64\n",
     "from config import *\n",
-    "import logging"
+    "import logging\n",
+    "import getpass"
    ]
   },
   {
@@ -461,9 +462,11 @@
     "        def validating_client():\n",
     "            print(\"Please enter your username:\")\n",
     "            username = input()\n",
+    "            \n",
     "\n",
     "            print(\"Please enter your password:\")\n",
-    "            password = input()\n",
+    "            #password = input()\n",
+    "            password = getpass.getpass()\n",
     "            \n",
     "            features = []\n",
     "            features.append(\"validation\")\n",
@@ -511,32 +514,14 @@
       "Please enter your username:\n",
       "payodhi\n",
       "Please enter your password:\n",
-      "payodhi\n",
+      "········\n",
       "Hello There!\n",
       "Enter the operation to be performed\n",
       "=> readFile\n",
       "\n",
       "Please enter directory name to read file\n",
       "common\n",
-      "Please enter file name to read it\n",
-      "pay12\n",
-      "File Content Showing in Below lines\n",
-      "\n",
-      "\n",
-      "hello\n",
-      "File Content ended here=================================\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n",
-      "=> createFile\n",
-      "\n",
-      "Please enter directory name to create file\n",
-      "common\n",
-      "Please enter file name\n",
-      "abc12\n",
-      "ACK@File Created\n",
-      "\n",
-      "Hello There!\n",
-      "Enter the operation to be performed\n"
+      "Please enter file name to read it\n"
      ]
     }
    ],
