--- a/Client-dhruv.ipynb
+++ b/Client-dhruv.ipynb
@@ -89,8 +89,8 @@
    "outputs": [],
    "source": [
     "def getKey(): #generating key with PBKDF2 for AES\n",
-    "    password = password_key\n",
-    "    passwordSalt = salt\n",
+    "    password = \"s3cr3t*c0d3\"\n",
+    "    passwordSalt = '76895'\n",
     "    key = pbkdf2.PBKDF2(password, passwordSalt).read(32)\n",
     "    return key"
    ]
@@ -103,9 +103,9 @@
    "outputs": [],
    "source": [
     "def encrypt(plaintext): #AES data encryption\n",
-    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
     "    ciphertext = aes.encrypt(plaintext)\n",
-    "    return ciphertext"
+    "    return ciphertext\n"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "def decrypt(enc): #AES data decryption\n",
-    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(key))\n",
+    "    aes = pyaes.AESModeOfOperationCTR(getKey(), pyaes.Counter(31129547035000047302952433967654195398124239844566322884172163637846056248223))\n",
     "    decrypted = aes.decrypt(enc)\n",
     "    return decrypted"
    ]
@@ -160,6 +160,8 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name\")\n",
     "            dirname = input()\n",
+    "            dirname=encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"createdir\")\n",
@@ -187,8 +189,12 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name to create file\")\n",
     "            dirname = input()\n",
+    "            dirname= encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name\")\n",
     "            filename = input()\n",
+    "            filename= encrypt(filename)\n",
+    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"createfile\")\n",
@@ -214,8 +220,12 @@
     "            global dirname, text\n",
     "            print(\"\\nPlease enter directory name to write data\")\n",
     "            dirname = input()\n",
+    "            dirname= encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name\")\n",
     "            filename = input()\n",
+    "            filename= encrypt(filename)\n",
+    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "            print(\"Please enter file content\")\n",
     "            filetext = input()\n",
     "\n",
@@ -243,8 +253,12 @@
     "\n",
     "            print(\"\\nPlease enter directory name to read file\")\n",
     "            dirname = input()\n",
+    "            dirname= encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name to read it\")\n",
     "            filename = input()\n",
+    "            filename= encrypt(filename)\n",
+    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"readfile\")\n",
@@ -287,8 +301,12 @@
     "            global dirname\n",
     "            print(\"\\nPlease enter directory name to delete a file\")\n",
     "            dirname = input()\n",
+    "            dirname= encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter file name to delete it\")\n",
     "            filename = input()\n",
+    "            filename= encrypt(filename)\n",
+    "            filename = str(base64.b64encode(filename),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"deletefile\")\n",
@@ -321,10 +339,16 @@
     "\n",
     "            print(\"\\nPlease enter directory name to rename a file\")\n",
     "            dirname = input()\n",
+    "            dirname=encrypt(dirname)\n",
+    "            dirname = str(base64.b64encode(dirname),'utf-8')\n",
     "            print(\"Please enter old file name for renaming\")\n",
     "            oldname = input()\n",
+    "            oldname= encrypt(oldname)\n",
+    "            oldname = str(base64.b64encode(oldname),'utf-8')\n",
     "            print(\"Please enter new file name to rename\")\n",
     "            newname = input()\n",
+    "            newname=encrypt(newname)\n",
+    "            newname = str(base64.b64encode(newname),'utf-8')\n",
     "\n",
     "            features = []\n",
     "            features.append(\"renamefile\")\n",
@@ -541,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
